ultimo commit desde pc 12:15 26/11/25